update: next js version 13 to 15

--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
     "mongoose": "^8.2.3",
-    "next": "13.5.1",
+    "next": "^15.1.0",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
-    "postcss": "8.4.30",
+    "postcss": "^8.4.49",
     "react": "18.2.0",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
